k8s/apps/monitoring/base/prometheus/prometheus-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  serviceName: prometheus

  replicas: 1
  
  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"

    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        # image tags at https://hub.docker.com/r/prom/prometheus/tags
        image: prom/prometheus:v2.49.1
        args:
          - '--storage.tsdb.retention.time=6h'
          - '--storage.tsdb.path=/prometheus'
          - '--config.file=/etc/prometheus/prometheus.yml'
          # enables `curl -X POST https://prometheus.activescott.com/-/reload` to reload configs per https://prometheus.io/docs/prometheus/latest/configuration/configuration/#scrape_config
          - '--web.enable-lifecycle'
        
        ports:
        - name: web-ui
          containerPort: 9090

        resources:
          limits:
            cpu: "1.0"
            # unclear what this should be: https://github.com/prometheus/prometheus/issues/5469
            memory: "2Gi"
        
        volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus
        
        - name: prometheus-storage-volume
          mountPath: /prometheus

      securityContext:
        # this user is on the node's os as the file system owner
        # https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod
        runAsUser:  4030
        runAsGroup: 4030
        fsGroup:    4030      
      
      volumes:
      - name: prometheus-config-volume
        configMap:
            defaultMode: 420
            name: prometheus-config
      
      - name: prometheus-storage-volume
        hostPath:
          path: /mnt/thedatapool/no-backup/app-data/prometheus/storage
